--- a/style.css
+++ b/style.css
@@ -381,7 +381,10 @@ section#thank_you .card {
     }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
+    #why-us .card {
+        width: 100%;
+    }
     .hero-content-container {
         padding: 50px 0;
     }
@@ -443,7 +446,13 @@ section#thank_you .card {
     }
 
     #footer p {
-        font-size: 16px;
+        font-size: 14px;
+    }
+    #footer h1 {
+        font-size: 20px;
+    }
+    #footer h6 {
+        font-size: 14px;
     }
 
     .custom-btn {
@@ -468,11 +477,7 @@ section#thank_you .card {
     }
 }
 
-@media (max-width: 768px) {
-    #why-us .card {
-        width: 100%;
-    }
-}
+
 
 button.navbar-toggler {
     background: var(--white-color);
